nexus-rt/tests/ui/callback_missing_ctx.stderr
error[E0277]: this type cannot be stored as a resource in the World
  --> tests/ui/callback_missing_ctx.rs:10:26
   |
10 | fn bad_callback(_config: Res<Config>, _event: u32) {
   |                          ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Resource` is not implemented for `Config`
  --> tests/ui/callback_missing_ctx.rs:7:1
   |
 7 | struct Config;
   | ^^^^^^^^^^^^^
   = note: add `#[derive(Resource)]` to your type, or use `new_resource!` for a newtype wrapper
help: the following other types implement trait `Resource`
  --> src/scheduler.rs
   |
   | impl crate::world::Resource for SchedulerTick {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SchedulerTick`
   |
  ::: src/clock.rs
   |
   | impl crate::world::Resource for Clock {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Clock`
note: required by a bound in `Res`
  --> src/resource.rs
   |
   | pub struct Res<'w, T: Resource + 'static> {
   |                       ^^^^^^^^ required by this bound in `Res`

error[E0277]: this type cannot be stored as a resource in the World
  --> tests/ui/callback_missing_ctx.rs:15:17
   |
15 |     wb.register(Config);
   |        -------- ^^^^^^ unsatisfied trait bound
   |        |
   |        required by a bound introduced by this call
   |
help: the trait `Resource` is not implemented for `Config`
  --> tests/ui/callback_missing_ctx.rs:7:1
   |
 7 | struct Config;
   | ^^^^^^^^^^^^^
   = note: add `#[derive(Resource)]` to your type, or use `new_resource!` for a newtype wrapper
help: the following other types implement trait `Resource`
  --> src/scheduler.rs
   |
   | impl crate::world::Resource for SchedulerTick {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SchedulerTick`
   |
  ::: src/clock.rs
   |
   | impl crate::world::Resource for Clock {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Clock`
note: required by a bound in `WorldBuilder::register`
  --> src/world.rs
   |
   |     pub fn register<T: Resource>(&mut self, value: T) -> ResourceId {
   |                        ^^^^^^^^ required by this bound in `WorldBuilder::register`

error[E0599]: no method named `into_callback` found for fn item `for<'a> fn(Res<'a, Config>, u32) {bad_callback}` in the current scope
  --> tests/ui/callback_missing_ctx.rs:19:28
   |
19 |     let _cb = bad_callback.into_callback(MyCtx, &reg);
   |                            ^^^^^^^^^^^^^ method not found in `for<'a> fn(Res<'a, Config>, u32) {bad_callback}`
